--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,8 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+remappings=["@openzeppelin/contracts=lib/openzeppelin-contracts/contracts"]
+ffi=true
+fs_permissions = [{access = "read", path="./img/"}]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
